fix: replace Thread.ofVirtual() with Thread for Java 17 compatibility
- Replace Thread.ofVirtual().start() with new Thread(...).start() in
  loadMenu() and handleSale() — virtual threads require Java 21+
- Wrap initialize() in try-catch to prevent crashes if backend is offline
- Remove unused BigDecimal import from MainViewController
- Add testfx-core, testfx-junit5 (4.0.18) and assertj-core (3.25.3) test dependencies

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>